--- a/Stratum.Desktop/MainWindow.xaml
+++ b/Stratum.Desktop/MainWindow.xaml
@@ -4,10 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:Stratum.Desktop.ViewModels"
+        xmlns:controls="clr-namespace:Stratum.Desktop.Controls"
         mc:Ignorable="d"
         Title="{DynamicResource AppName}"
-        Height="600" Width="450"
-        MinHeight="400" MinWidth="350"
+        Height="600" Width="850"
+        MinHeight="400" MinWidth="600"
         WindowStartupLocation="CenterScreen"
         Background="{StaticResource BackgroundBrush}">
 
@@ -18,199 +19,20 @@
     </Window.InputBindings>
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="80"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-        <!-- Header -->
-        <Border Grid.Row="0" Background="{StaticResource SurfaceBrush}"
-                BorderBrush="{StaticResource DividerBrush}" BorderThickness="0,0,0,1"
-                Padding="16,12">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
+        <!-- Navigation Rail -->
+        <controls:NavigationRail x:Name="NavigationRail"
+                                  Grid.Column="0"
+                                  NavigationChanged="NavigationRail_NavigationChanged"/>
 
-                <!-- Search Box -->
-                <TextBox x:Name="SearchBox" Grid.Column="0"
-                         Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
-                         Style="{StaticResource SearchTextBoxStyle}"
-                         Margin="0,0,12,0">
-                    <TextBox.InputBindings>
-                        <KeyBinding Key="Escape" Command="{Binding ClearSearchCommand}"/>
-                    </TextBox.InputBindings>
-                </TextBox>
-
-                <!-- Category Filter -->
-                <ComboBox Grid.Column="1"
-                          ItemsSource="{Binding Categories}"
-                          SelectedItem="{Binding SelectedCategory}"
-                          DisplayMemberPath="Name"
-                          Style="{StaticResource CategoryComboBoxStyle}"
-                          Margin="0,0,8,0"/>
-
-                <!-- Settings Button -->
-                <Button Grid.Column="2"
-                        Style="{StaticResource IconButtonStyle}"
-                        Command="{Binding OpenSettingsCommand}"
-                        ToolTip="{DynamicResource Settings}">
-                    <TextBlock Text="&#x2699;" FontSize="20" FontFamily="Segoe UI Symbol"/>
-                </Button>
-            </Grid>
-        </Border>
-
-        <!-- Authenticator List -->
-        <ListBox Grid.Row="1"
-                 ItemsSource="{Binding FilteredAuthenticators}"
-                 SelectedItem="{Binding SelectedAuthenticator}"
-                 Background="Transparent"
-                 BorderThickness="0"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                 VirtualizingPanel.IsVirtualizing="True"
-                 VirtualizingPanel.VirtualizationMode="Recycling"
-                 ItemContainerStyle="{StaticResource AuthenticatorListItemStyle}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Border Style="{StaticResource CardStyle}"
-                            Margin="16,8,16,0"
-                            Cursor="Hand"
-                            MouseLeftButtonUp="AuthenticatorCard_Click">
-                        <Border.ContextMenu>
-                            <ContextMenu>
-                                <MenuItem Header="{DynamicResource CopyCode}" Command="{Binding DataContext.CopyCodeCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                                          CommandParameter="{Binding}"/>
-                                <MenuItem Header="{DynamicResource Edit}" Command="{Binding DataContext.EditAuthenticatorCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                                          CommandParameter="{Binding}"/>
-                                <Separator/>
-                                <MenuItem Header="{DynamicResource ShowQRCode}" Command="{Binding DataContext.ShowQrCodeCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                                          CommandParameter="{Binding}"/>
-                                <Separator/>
-                                <MenuItem Header="{DynamicResource Delete}" Command="{Binding DataContext.DeleteAuthenticatorCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                                          CommandParameter="{Binding}" Foreground="Red"/>
-                            </ContextMenu>
-                        </Border.ContextMenu>
-
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="48"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="8"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-
-                            <!-- Icon -->
-                            <Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="3"
-                                    Width="40" Height="40" CornerRadius="20"
-                                    Background="{StaticResource PrimaryBrush}"
-                                    VerticalAlignment="Center" Margin="0,0,12,0">
-                                <TextBlock Text="{Binding IssuerInitial}"
-                                           FontSize="18" FontWeight="Medium"
-                                           Foreground="White"
-                                           HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            </Border>
-
-                            <!-- Issuer -->
-                            <TextBlock Grid.Column="1" Grid.Row="0"
-                                       Text="{Binding Issuer}"
-                                       Style="{StaticResource TitleStyle}"/>
-
-                            <!-- Username -->
-                            <TextBlock Grid.Column="1" Grid.Row="1"
-                                       Text="{Binding Username}"
-                                       Style="{StaticResource SubtitleStyle}"
-                                       Visibility="{Binding HasUsername, Converter={StaticResource BoolToVisibilityConverter}}"/>
-
-                            <!-- OTP Code -->
-                            <TextBlock Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2"
-                                       Text="{Binding FormattedCode}"
-                                       Style="{StaticResource CodeStyle}"
-                                       Margin="0,8,0,0"/>
-
-                            <!-- Timer Progress -->
-                            <Grid Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-
-                                <ProgressBar Grid.Column="0"
-                                             Value="{Binding TimeRemaining, Mode=OneWay}"
-                                             Maximum="{Binding Period, Mode=OneWay}"
-                                             Style="{StaticResource TimerProgressStyle}"
-                                             Visibility="{Binding IsTimeBased, Converter={StaticResource BoolToVisibilityConverter}}"/>
-
-                                <TextBlock Grid.Column="1"
-                                           Text="{Binding TimeRemaining, StringFormat={}{0}s}"
-                                           Style="{StaticResource SubtitleStyle}"
-                                           Margin="8,0,0,0"
-                                           Visibility="{Binding IsTimeBased, Converter={StaticResource BoolToVisibilityConverter}}"/>
-
-                                <!-- HOTP Refresh Button -->
-                                <Button Grid.Column="1"
-                                        Content="Refresh"
-                                        Command="{Binding DataContext.IncrementCounterCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                                        CommandParameter="{Binding}"
-                                        Visibility="{Binding IsCounterBased, Converter={StaticResource BoolToVisibilityConverter}}"
-                                        Style="{StaticResource PrimaryButtonStyle}"
-                                        Padding="8,4"/>
-                            </Grid>
-
-                            <!-- Copy Indicator -->
-                            <Border Grid.Column="2" Grid.Row="0"
-                                    Visibility="{Binding JustCopied, Converter={StaticResource BoolToVisibilityConverter}}"
-                                    Background="{StaticResource SuccessBrush}"
-                                    CornerRadius="4" Padding="8,4">
-                                <TextBlock Text="{DynamicResource Copied}" Foreground="White" FontSize="11"/>
-                            </Border>
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-
-        <!-- Empty State -->
-        <StackPanel Grid.Row="1"
-                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                    Visibility="{Binding IsEmpty, Converter={StaticResource BoolToVisibilityConverter}}">
-            <TextBlock Text="{DynamicResource NoAuthenticators}"
-                       Style="{StaticResource HeadlineStyle}"
-                       HorizontalAlignment="Center" Opacity="0.5"/>
-            <TextBlock Text="{DynamicResource AddYourFirst}"
-                       Style="{StaticResource SubtitleStyle}"
-                       HorizontalAlignment="Center" Margin="0,8,0,0"/>
-        </StackPanel>
-
-        <!-- Footer / Add Button -->
-        <Border Grid.Row="2"
-                Background="{StaticResource SurfaceBrush}"
-                BorderBrush="{StaticResource DividerBrush}" BorderThickness="0,1,0,0"
-                Padding="16,12">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-
-                <TextBlock Grid.Column="0"
-                           Text="{Binding AuthenticatorCount, StringFormat={}{0} authenticators}"
-                           Style="{StaticResource SubtitleStyle}"
-                           VerticalAlignment="Center"/>
-
-                <Button Grid.Column="1"
-                        Content="{DynamicResource Add}"
-                        Style="{StaticResource PrimaryButtonStyle}"
-                        Command="{Binding AddAuthenticatorCommand}"/>
-            </Grid>
-        </Border>
+        <!-- Content Frame -->
+        <Frame x:Name="ContentFrame"
+               Grid.Column="1"
+               NavigationUIVisibility="Hidden"
+               Background="{StaticResource BackgroundBrush}"/>
     </Grid>
 </Window>
