feat:统一默认图标并简化图标系统，修复托盘/构建图标与滚动卡顿问题   Unify the default icon and simplify the icon system, fixing tray/build icons and scroll freeze

--- a/Stratum.Desktop/App.xaml
+++ b/Stratum.Desktop/App.xaml
@@ -12,6 +12,7 @@
             </ResourceDictionary.MergedDictionaries>
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
             <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter"/>
+            <converters:ImageVisibilityConverter x:Key="ImageVisibilityConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
