--- a/Stratum.Desktop/Panels/HomePanel.xaml
+++ b/Stratum.Desktop/Panels/HomePanel.xaml
@@ -51,7 +51,9 @@
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  VirtualizingPanel.IsVirtualizing="True"
                  VirtualizingPanel.VirtualizationMode="Recycling"
-                 ItemContainerStyle="{StaticResource AuthenticatorListItemStyle}">
+                 ItemContainerStyle="{StaticResource AuthenticatorListItemStyle}"
+                 VirtualizingPanel.CacheLength="2"
+                 VirtualizingPanel.CacheLengthUnit="Item">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Border Style="{StaticResource CardStyle}"
@@ -92,10 +94,16 @@
                                     Width="40" Height="40" CornerRadius="20"
                                     Background="{StaticResource PrimaryBrush}"
                                     VerticalAlignment="Center" Margin="0,0,12,0">
-                                <TextBlock Text="{Binding IssuerInitial}"
-                                           FontSize="18" FontWeight="Medium"
-                                           Foreground="White"
-                                           HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <Grid>
+                                    <Image Source="{Binding IconImage}" Width="24" Height="24"
+                                           HorizontalAlignment="Center" VerticalAlignment="Center"
+                                           Visibility="{Binding IconImage, Converter={StaticResource ImageVisibilityConverter}}"/>
+                                    <TextBlock Text="{Binding IssuerInitial}"
+                                               FontSize="18" FontWeight="Medium"
+                                               Foreground="White"
+                                               HorizontalAlignment="Center" VerticalAlignment="Center"
+                                               Visibility="{Binding IconImage, Converter={StaticResource ImageVisibilityConverter}, ConverterParameter=Invert}"/>
+                                </Grid>
                             </Border>
 
                             <!-- Issuer -->
