--- a/Stratum.Desktop/Views/PasswordDialog.xaml
+++ b/Stratum.Desktop/Views/PasswordDialog.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Password"
+        Title="{DynamicResource Password}"
         SizeToContent="Height"
         Width="350"
         MinHeight="200"
@@ -29,16 +29,16 @@
         <PasswordBox x:Name="PasswordBox" Grid.Row="1" Padding="12,8" FontSize="14"/>
 
         <StackPanel x:Name="ConfirmPanel" Grid.Row="2" Margin="0,12,0,0" Visibility="Collapsed">
-            <TextBlock Text="Confirm password:" Margin="0,0,0,8"/>
+            <TextBlock Text="{DynamicResource ConfirmPassword}" Margin="0,0,0,8"/>
             <PasswordBox x:Name="ConfirmPasswordBox" Padding="12,8" FontSize="14"/>
         </StackPanel>
 
         <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Cancel"
+            <Button Content="{DynamicResource Cancel}"
                     Style="{StaticResource IconButtonStyle}"
                     Width="Auto" Height="Auto" Padding="16,8"
                     Click="CancelButton_Click" Margin="0,0,8,0"/>
-            <Button Content="OK"
+            <Button Content="{DynamicResource OK}"
                     Style="{StaticResource PrimaryButtonStyle}"
                     Click="OkButton_Click"/>
         </StackPanel>
