--- a/Stratum.Desktop/Panels/CategoriesPanel.xaml
+++ b/Stratum.Desktop/Panels/CategoriesPanel.xaml
@@ -30,11 +30,11 @@
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="{Binding Name}" VerticalAlignment="Center" Style="{StaticResource TitleStyle}"/>
-                            <Button Grid.Column="1" Content="Edit" Margin="8,0"
+                            <Button Grid.Column="1" Content="{DynamicResource Edit}" Margin="8,0"
                                     Style="{StaticResource IconButtonStyle}"
                                     Width="Auto" Height="Auto" Padding="8,4"
                                     Click="EditCategoryButton_Click"/>
-                            <Button Grid.Column="2" Content="Delete"
+                            <Button Grid.Column="2" Content="{DynamicResource Delete}"
                                     Style="{StaticResource IconButtonStyle}"
                                     Width="Auto" Height="Auto" Padding="8,4"
                                     Foreground="Red"
@@ -56,7 +56,7 @@
                          Style="{StaticResource SearchTextBoxStyle}"
                          MaxLength="32"
                          Margin="0,0,8,0"/>
-                <Button Grid.Column="1" Content="Add"
+                <Button Grid.Column="1" Content="{DynamicResource Add}"
                         Style="{StaticResource PrimaryButtonStyle}"
                         Click="AddCategoryButton_Click"/>
             </Grid>
